--- a/register.html
+++ b/register.html
@@ -10,7 +10,7 @@
 <body>
 <center>
 <div class="container">
-  <h2>Registrater</h2>
+  <h2>Register</h2>
 
   <p>How would you like to register?</p>
  <div class="choices">
