updated with new code

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  
   <meta charset="utf-8" />
   <link rel="icon" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -12,6 +13,18 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Post+No+Bills+Colombo+ExtraBold%3A800"/>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Post+No+Bills+Jaffna+ExtraBold%3A800"/>
   <link rel="stylesheet" href="./styles/index.css"/>
+  <script>
+    window.embeddedChatbotConfig = {
+      chatbotId: "v-meGkzCfGPgsHHKaU-ff",
+      domain: "www.chatbase.co"
+    }
+    </script>
+    <script
+      src="https://www.chatbase.co/embed.min.js"
+      chatbotId="v-meGkzCfGPgsHHKaU-ff"
+      domain="www.chatbase.co"
+      defer>
+    </script>
 </head>
 <body>
 <div class="landing-page">
