--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,6 +12,18 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Post+No+Bills+Colombo+ExtraBold%3A800"/>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Post+No+Bills+Jaffna+ExtraBold%3A800"/>
   <link rel="stylesheet" href="./styles/index.css"/>
+  <script>
+    window.embeddedChatbotConfig = {
+    chatbotId: "NA_2sOxfPkfyRAnU-bb0E",
+    domain: "www.chatbase.co"
+    }
+    </script>
+    <script
+    src="https://www.chatbase.co/embed.min.js"
+    chatbotId="NA_2sOxfPkfyRAnU-bb0E"
+    domain="www.chatbase.co"
+    defer>
+    </script>
 </head>
 <body>
 <div class="landing-page">
@@ -25,8 +37,12 @@
       </p>
     </div>
     <div class="sidebar">
-      <button onclick="window.location.href='choice.html'"><p class="register-txt">Register</p></button>
-      <p class="log-in">Log in</p>
+      <button onclick="window.location.href='register.html'" class="register-button">
+        <p class="register-txt">Register</p>
+      </button>
+      <button onclick="window.location.href='login.html'" class="register-button">
+        <p class="log-in">Log in</p>
+      </button>
     </div>
   </div>
   <div class="hero-section">
