--- a/frontend/option-user.html
+++ b/frontend/option-user.html
@@ -11,7 +11,7 @@
         margin: 15px;
         padding: 15px 30px;
         text-align: center;
-        font-size: 18px;
+        font-size: 30px;
         letter-spacing: 1px;
         text-decoration: none;
         color: #725ac1;
@@ -21,13 +21,13 @@
         border: 2px solid #725ac1;
         border-radius: 10px;
         box-shadow: inset 0 0 0 0 #725ac1;
-        width: 400px;
-        height: 170px;
+        width: 550px;
+        height: 330px;
       }
 
       button:hover {
         color: white;
-        box-shadow: inset 0 -170px 0 0 #725ac1;
+        box-shadow: inset 0 -330px 0 0 #725ac1;
       }
 
       button:active {
@@ -40,27 +40,37 @@
       .line2{
         display: flex;
         justify-content: space-around;
+        
       }
       .line3{
         display: flex;
         justify-content: space-around;
       }
     </style>
+    <script>
+      window.embeddedChatbotConfig = {
+        chatbotId: "v-meGkzCfGPgsHHKaU-ff",
+        domain: "www.chatbase.co"
+      }
+      </script>
+      <script
+        src="https://www.chatbase.co/embed.min.js"
+        chatbotId="v-meGkzCfGPgsHHKaU-ff"
+        domain="www.chatbase.co"
+        defer>
+      </script>
   </head>
   <body>
     <center>
         <div class="options">
     <div class="line1">
-      <button>New <br>Complaint</button>
-      <button>Complaint <br> Status</button>
+      <button onclick="window.location.href='new-complaint.html'">New <br>Complaint</button>
+      <button onclick="window.location.href='complaint-status.html'">Complaint <br> Status</button>
     </div>
     <div class="line2">
-      <button>Previous <br>Complaints</button>
+      <button>View <br>Polls</button>
       <button>Chats</button>
     </div>
-    <div class="line3">
-      <button>View <br>Polls</button>
-      <button>AI <br>Bot</button>
     </div>
     </div>
     </center>
