--- a/frontend/option-representatives.html
+++ b/frontend/option-representatives.html
@@ -14,11 +14,11 @@
         font-size: 30px;
         letter-spacing: 1px;
         text-decoration: none;
-        color: #725ac1;
+        background-color: #301063;
         background: transparent;
         cursor: pointer;
         transition: ease-out 0.5s;
-        border: 2px solid #725ac1;
+        background-color: #301063;
         border-radius: 10px;
         box-shadow: inset 0 0 0 0 #725ac1;
         width: 550px;
@@ -60,15 +60,15 @@
         defer>
       </script>
   </head>
-  <body>
+  <body style="background: linear-gradient(250.04deg, #29384d 50.42%, #8e00ff 87.93%);">
     <center>
         <div class="options">
     <div class="line1">
-      <button>View <br>Complaint</button>
-      <button>Complaint Higher<br> Authorities</button>
+      <button onclick="window.location.href='view-complaints.html'">View <br>Complaints</button>
+      <button onclick="window.location.href='higher-authorities-complaint.html'">Complaint Higher<br> Authorities</button>
     </div>
     <div class="line2">
-      <button>Complaints <br>Solved</button>
+      <button onclick="window.location.href='solved-complaints.html'">Complaints <br>Solved</button>
       <button>Polls</button>
     </div>
     </div>
