--- a/frontend/option-user.html
+++ b/frontend/option-user.html
@@ -41,6 +41,7 @@
         display: flex;
         justify-content: space-around;
         
+        
       }
       .line3{
         display: flex;
@@ -60,7 +61,7 @@ option-user        src="https://www.chatbase.co/embed.min.js"
         defer>
       </script>
   </head>
-  <body>
+  <body style=" background: linear-gradient(250.04deg, #29384d 50.42%, #8e00ff 87.93%);">
     <center>
         <div class="options">
     <div class="line1">
