--- a/frontend/option-representatives.html
+++ b/frontend/option-representatives.html
@@ -18,9 +18,9 @@
         background: transparent;
         cursor: pointer;
         transition: ease-out 0.5s;
-        border: 2px solid #725ac1;
+        border: 2px solid #301063;
         border-radius: 10px;
-        box-shadow: inset 0 0 0 0 #725ac1;
+        box-shadow: inset 0 0 0 0 #301063;
         width: 550px;
         height: 330px;
         font-family: 'Inter', sans-serif;
