--- a/frontend/new-complaint.html
+++ b/frontend/new-complaint.html
@@ -37,7 +37,7 @@
       box-sizing: border-box;
     }
     input[type="submit"] {
-      background-color: #4CAF50;
+      background-color: #301063;
       color: white;
       padding: 10px 20px;
       border: none;
@@ -46,11 +46,11 @@
       float: right;
     }
     input[type="submit"]:hover {
-      background-color: #45a049;
+      background-color: #301063;
     }
   </style>
 </head>
-<body>
+<body style="background: linear-gradient(250.04deg, #29384d 50.42%, #8e00ff 87.93%);">
 
   <div class="container">
     <h2>Submit a Complaint</h2>
