--- a/frontend/option-representatives.html
+++ b/frontend/option-representatives.html
@@ -18,9 +18,9 @@
         background: transparent;
         cursor: pointer;
         transition: ease-out 0.5s;
-        border: 2px solid #301063;
+        border: 2px solid #725ac1;
         border-radius: 10px;
-        box-shadow: inset 0 0 0 0 #301063;
+        box-shadow: inset 0 0 0 0 #725ac1;
         width: 550px;
         height: 330px;
         font-family: 'Inter', sans-serif;
@@ -64,11 +64,11 @@
     <center>
         <div class="options">
     <div class="line1">
-      <button>View <br>Complaint</button>
-      <button>Complaint Higher<br> Authorities</button>
+      <button onclick="window.location.href='view-complaints.html'">View <br>Complaints</button>
+      <button onclick="window.location.href='higher-authorities-complaint.html'">Complaint Higher<br> Authorities</button>
     </div>
     <div class="line2">
-      <button>Complaints <br>Solved</button>
+      <button onclick="window.location.href='solved-complaints.html'">Complaints <br>Solved</button>
       <button>Polls</button>
     </div>
     </div>
