--- a/frontend/register.html
+++ b/frontend/register.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="register.css">
 
 </head>
-<body>
+<body style="background: linear-gradient(250.04deg, #29384d 50.42%, #8e00ff 87.93%);">
 <center>
 <div class="container">
   <h2>Register</h2>
@@ -156,7 +156,7 @@ function redirectToSocial() {
   
   .title {
     font-size: 28px;
-    color: royalblue;
+    color: #301063;
     font-weight: 600;
     letter-spacing: -1px;
     position: relative;
@@ -172,13 +172,13 @@ function redirectToSocial() {
     width: 16px;
     border-radius: 50%;
     left: 0px;
-    background-color: royalblue;
+    background-color: #301063;
   }
   
   .title::before {
     width: 18px;
     height: 18px;
-    background-color: royalblue;
+    background-color: #301063;
   }
   
   .title::after {
@@ -197,11 +197,11 @@ function redirectToSocial() {
   }
   
   .signin a {
-    color: royalblue;
+    color: #301063;
   }
   
   .signin a:hover {
-    text-decoration: underline royalblue;
+    text-decoration: underline #301063;
   }
   
   .flex {
@@ -250,7 +250,7 @@ function redirectToSocial() {
   .submit {
     border: none;
     outline: none;
-    background-color: royalblue;
+    background-color: #301063;
     padding: 10px;
     border-radius: 10px;
     color: #fff;
@@ -278,7 +278,7 @@ function redirectToSocial() {
     border: none;
     display: flex;
     padding: 0.75rem 1.5rem;
-    background-color: #488aec;
+    background-color: #301063;
     color: #ffffff;
     font-size: 0.75rem;
     line-height: 1rem;
