--- a/frontend/option-user.html
+++ b/frontend/option-user.html
@@ -14,20 +14,20 @@
         font-size: 30px;
         letter-spacing: 1px;
         text-decoration: none;
-        color: #725ac1;
+        color: #000000;
         background: transparent;
         cursor: pointer;
         transition: ease-out 0.5s;
-        border: 2px solid #725ac1;
+        border: 2px solid #000000;
         border-radius: 10px;
-        box-shadow: inset 0 0 0 0 #725ac1;
+        box-shadow: inset 0 0 0 0 #000000;
         width: 550px;
         height: 330px;
       }
 
       button:hover {
         color: white;
-        box-shadow: inset 0 -330px 0 0 #725ac1;
+        box-shadow: inset 0 -330px 0 0 #301063;
       }
 
       button:active {
@@ -40,7 +40,6 @@
       .line2{
         display: flex;
         justify-content: space-around;
-        
         
       }
       .line3{
