--- a/frontend/successfully-registered.html
+++ b/frontend/successfully-registered.html
@@ -31,7 +31,7 @@
       margin-top: 20px;
     }
     .btn {
-      background-color: #4CAF50;
+      background-color: #301063;
       color: white;
       padding: 10px 20px;
       border: none;
@@ -41,11 +41,11 @@
       display: inline-block;
     }
     .btn:hover {
-      background-color: #45a049;
+      background-color: #301063;
     }
   </style>
 </head>
-<body>
+<body style="background: linear-gradient(250.04deg, #29384d 50.42%, #8e00ff 87.93%);">
 
   <div class="container">
     <h2>Successfully Registered</h2>
