--- a/frontend/new-complaint.html
+++ b/frontend/new-complaint.html
@@ -60,7 +60,7 @@
   
       <label for="email">Email</label>
       <input type="text" id="email" name="email" required>
-  
+new-complaint  
       <label for="subject">Subject</label>
       <input type="text" id="subject" name="subject" required>
   
