--- a/frontend/option-user.html
+++ b/frontend/option-user.html
@@ -62,16 +62,18 @@ option-user        src="https://www.chatbase.co/embed.min.js"
   </head>
   <body style=" background: linear-gradient(250.04deg, #29384d 50.42%, #8e00ff 87.93%);">
     <center>
-        <div class="options">
+        < class="options">
     <div class="line1">
       <button onclick="window.location.href='new-complaint.html'">New <br>Complaint</button>
       <a href="/complaint_history">
         <button>Complaint Status</button>
     </a>
     
-    </div> <div class="line2"> <a href="/show_polls"><button>View <br>Polls</button> <button>Chats</button> </div>
-    </div>
-    </div>
+    </div> 
+    <div class="line2"> 
+      <a href="/create_polls"><button>View <br>Polls</button> </a>
+      <button>Chats</button> </div>
+
     </center>
   </body>
 </html>
