--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,18 +13,20 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Post+No+Bills+Colombo+ExtraBold%3A800"/>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Post+No+Bills+Jaffna+ExtraBold%3A800"/>
   <link rel="stylesheet" href="./styles/index.css"/>
-  <script>
-    window.embeddedChatbotConfig = {
-      chatbotId: "v-meGkzCfGPgsHHKaU-ff",
-      domain: "www.chatbase.co"
-    }
-    </script>
-    <script
-      src="https://www.chatbase.co/embed.min.js"
-      chatbotId="v-meGkzCfGPgsHHKaU-ff"
-      domain="www.chatbase.co"
-      defer>
-    </script>
+  
+<script>
+  window.embeddedChatbotConfig = {
+  chatbotId: "NA_2sOxfPkfyRAnU-bb0E",
+  domain: "www.chatbase.co"
+  }
+  </script>
+  <script
+  src="https://www.chatbase.co/embed.min.js"
+  chatbotId="NA_2sOxfPkfyRAnU-bb0E"
+  domain="www.chatbase.co"
+  defer>
+  </script>
+  
 </head>
 <body>
 <div class="landing-page">
