Fixed bug in main functionality

--- a/frontend/option-user.html
+++ b/frontend/option-user.html
@@ -71,7 +71,7 @@ option-user        src="https://www.chatbase.co/embed.min.js"
     
     </div> 
     <div class="line2"> 
-      <a href="/create_polls"><button>View <br>Polls</button> </a>
+      <a href="/show_polls"><button>View <br>Polls</button> </a>
       <button>Chats</button> </div>
 
     </center>
