done by shashwat cause no one else is helping him 😔😔😔

--- a/frontend/option-representatives.html
+++ b/frontend/option-representatives.html
@@ -64,11 +64,11 @@
     <center>
         <div class="options">
     <div class="line1">
-      <button onclick="window.location.href='view-complaints.html'">View <br>Complaints</button>
+      <a href="/complaint_history_all"><button >View <br>Complaints</button></a>
       <button onclick="window.location.href='higher-authorities-complaint.html'">Complaint Higher<br> Authorities</button>
     </div>
     <div class="line2">
-      <button onclick="window.location.href='solved-complaints.html'">Complaints <br>Solved</button>
+      <a href="/complaint_history_solved"><button >Solved <br>Complaints</button></a>
       <button>Polls</button>
     </div>
     </div>
