--- a/frontend/index.html
+++ b/frontend/index.html
@@ -27,6 +27,20 @@
   defer>
   </script>
   
+
+<script>
+  window.embeddedChatbotConfig = {
+  chatbotId: "NA_2sOxfPkfyRAnU-bb0E",
+  domain: "www.chatbase.co"
+  }
+  </script>
+  <script
+  src="https://www.chatbase.co/embed.min.js"
+  chatbotId="NA_2sOxfPkfyRAnU-bb0E"
+  domain="www.chatbase.co"
+  defer>
+  </script>
+  
 </head>
 <body>
 <div class="landing-page">
