maybe this is it

--- a/frontend/option-representatives.html
+++ b/frontend/option-representatives.html
@@ -69,7 +69,8 @@
     </div>
     <div class="line2">
       <a href="/complaint_history_solved"><button >Solved <br>Complaints</button></a>
-      <button>Polls</button>
+      <a href="/poll-creation"><button>Polls</button></a>
+      
     </div>
     </div>
     </center>
