--- a/frontend/create_polls.html
+++ b/frontend/create_polls.html
@@ -4,186 +4,78 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Create New Poll</title>
-  <style>
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-color: #f7f7f7;
-      margin: 0;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-    }
-
-    #newPollContainer {
-      background-color: #ffffff;
-      padding: 30px;
-      border-radius: 8px;
-      box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
-      text-align: center;
-      width: 80%;
-      max-width: 600px;
-      box-sizing: border-box;
-    }
-
-    h2 {
-      color: #333;
-      margin-bottom: 20px;
-    }
-
-    label {
-      display: block;
-      margin-bottom: 8px;
-      color: #555;
-    }
-
-    input {
-      width: 100%;
-      padding: 10px;
-      margin-bottom: 15px;
-      border: 1px solid #ccc;
-      border-radius: 5px;
-      box-sizing: border-box;
-      font-size: 14px;
-    }
-
-    .pollOption {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      margin-bottom: 15px;
-    }
-
-    .optionInput {
-      width: 75%;
-      padding: 10px;
-      border: 1px solid #ccc;
-      border-radius: 5px;
-      box-sizing: border-box;
-      font-size: 14px;
-    }
-
-    #addOptionBtn {
-      background-color: #4CAF50;
-      color: white;
-      padding: 10px 20px;
-      font-size: 16px;
-      cursor: pointer;
-      border: none;
-      border-radius: 5px;
-      margin-top: 15px;
-      transition: background-color 0.3s ease;
-    }
-
-    #addOptionBtn:hover {
-      background-color: #45a049;
-    }
-
-    #submitBtn {
-      background-color: #2196F3;
-      color: white;
-      padding: 12px 25px;
-      font-size: 16px;
-      cursor: pointer;
-      border: none;
-      border-radius: 5px;
-      margin-top: 20px;
-      transition: background-color 0.3s ease;
-    }
-
-    #submitBtn:hover {
-      background-color: #0b7dda;
-    }
-  </style>
 </head>
 <body>
 
-  <div id="newPollContainer">
-    <h2>Create New Poll</h2>
+  <h2>Create New Poll</h2>
 
+  <form id="pollForm">
     <label for="pollName">Poll Name:</label>
-    <input type="text" id="pollName" placeholder="Enter poll name" required>
+    <input type="text" id="pollName" name="pollName" required><br><br>
 
-    <div id="pollOptions">
-      <div class="pollOption">
-        <input type="text" class="optionInput" placeholder="Enter option" required>
-        <button class="removeOptionBtn" onclick="removeOption(this)">Remove</button>
-      </div>
+    <div id="optionsContainer">
+      <label for="option1">Option 1:</label>
+      <input type="text" id="option1" name="option" required><br><br>
     </div>
 
-    <button id="addOptionBtn" onclick="addOption()">Add Option</button>
+    <button type="button" onclick="addOption()">Add Option</button><br><br>
 
-    <button id="submitBtn" onclick="submitNewPoll()">Create Poll</button>
-  </div>
+    <button type="submit">Create Poll</button>
+  </form>
 
   <script>
     function addOption() {
-      var pollOptionsContainer = document.getElementById('pollOptions');
+      var optionsContainer = document.getElementById('optionsContainer');
+      var optionNumber = optionsContainer.childElementCount + 1;
 
-      var newOptionDiv = document.createElement('div');
-      newOptionDiv.className = 'pollOption';
+      var label = document.createElement('label');
+      label.textContent = 'Option ' + optionNumber + ':';
+      optionsContainer.appendChild(label);
 
-      var newOptionInput = document.createElement('input');
-      newOptionInput.type = 'text';
-      newOptionInput.className = 'optionInput';
-      newOptionInput.placeholder = 'Enter option';
-      newOptionInput.required = true;
+      var input = document.createElement('input');
+      input.type = 'text';
+      input.name = 'option';
+      input.required = true;
+      optionsContainer.appendChild(input);
 
-      var removeOptionBtn = document.createElement('button');
-      removeOptionBtn.className = 'removeOptionBtn';
-      removeOptionBtn.textContent = 'Remove';
-      removeOptionBtn.addEventListener('click', function() {
-        removeOption(this);
+      optionsContainer.appendChild(document.createElement('br'));
+      optionsContainer.appendChild(document.createElement('br'));
+    }
+
+    document.getElementById('pollForm').addEventListener('submit', function(event) {
+      event.preventDefault();
+
+      var formData = new FormData(this);
+      var pollData = {};
+
+      formData.forEach(function(value, key) {
+        if (key === 'option') {
+          if (!pollData.hasOwnProperty(key)) {
+            pollData[key] = [];
+          }
+          pollData[key].push(value);
+        } else {
+          pollData[key] = value;
+        }
       });
 
-      newOptionDiv.appendChild(newOptionInput);
-      newOptionDiv.appendChild(removeOptionBtn);
-      pollOptionsContainer.appendChild(newOptionDiv);
-    }
-
-    function removeOption(btn) {
-      var pollOptionsContainer = document.getElementById('pollOptions');
-      var optionDiv = btn.parentNode;
-      pollOptionsContainer.removeChild(optionDiv);
-    }
-
-    function submitNewPoll() {
-  var pollName = document.getElementById('pollName').value;
-  var optionInputs = document.getElementsByClassName('optionInput');
-
-  if (pollName.trim() === '') {
-    alert('Please enter a poll name.');
-    return;
-  }
-
-  if (optionInputs.length < 2) {
-    alert('Please add at least two options to the poll.');
-    return;
-  }
-
-  var pollOptions = Array.from(optionInputs).map(input => input.value);
-
-  // Send data to Node.js server using AJAX
-  fetch('/create-poll', {
-    method: 'POST',
-    headers: {
-      'Content-Type': 'application/json'
-    },
-    body: JSON.stringify({
-      pollName: pollName,
-      pollOptions: pollOptions
-    })
-  })
-  .then(response => response.json())
-  .then(data => {
-    alert(data.message);  // Handle server response (optional)
-  })
-  .catch(error => {
-    console.error('Error sending poll data:', error);
-    alert('An error occurred while creating the poll.');
-  });
-}
-
+      fetch('/poll-save', {
+        method: 'POST',
+        headers: {
+          'Content-Type': 'application/json'
+        },
+        body: JSON.stringify(pollData)
+      })
+      .then(response => response.json())
+      .then(data => {
+        console.log(data);
+        alert('Poll created successfully');
+      })
+      .catch(error => {
+        console.error('Error creating poll:', error);
+        alert('An error occurred while creating the poll.');
+      });
+    });
   </script>
 
 </body>
