--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,34 +13,18 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Post+No+Bills+Colombo+ExtraBold%3A800"/>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Post+No+Bills+Jaffna+ExtraBold%3A800"/>
   <link rel="stylesheet" href="./styles/index.css"/>
-  
-<script>
-  window.embeddedChatbotConfig = {
-  chatbotId: "NA_2sOxfPkfyRAnU-bb0E",
-  domain: "www.chatbase.co"
-  }
-  </script>
-  <script
-  src="https://www.chatbase.co/embed.min.js"
-  chatbotId="NA_2sOxfPkfyRAnU-bb0E"
-  domain="www.chatbase.co"
-  defer>
-  </script>
-  
-
-<script>
-  window.embeddedChatbotConfig = {
-  chatbotId: "NA_2sOxfPkfyRAnU-bb0E",
-  domain: "www.chatbase.co"
-  }
-  </script>
-  <script
-  src="https://www.chatbase.co/embed.min.js"
-  chatbotId="NA_2sOxfPkfyRAnU-bb0E"
-  domain="www.chatbase.co"
-  defer>
-  </script>
-  
+  <script>
+    window.embeddedChatbotConfig = {
+      chatbotId: "v-meGkzCfGPgsHHKaU-ff",
+      domain: "www.chatbase.co"
+    }
+    </script>
+    <script
+      src="https://www.chatbase.co/embed.min.js"
+      chatbotId="v-meGkzCfGPgsHHKaU-ff"
+      domain="www.chatbase.co"
+      defer>
+    </script>
 </head>
 <body>
 <div class="landing-page">
@@ -62,6 +46,7 @@
       </button>
     </div>
   </div>
+  
   <div class="hero-section">
     <p class="main-txt">
       <span class="main-txt-1">हम</span>
@@ -105,8 +90,8 @@
     </div>
   </div>
   <div class="footer">
-    <div class="footer-heading"> हमRaaj’s impact: The Desi Connect</div>
-    <div class="footer-desc">&#34;Humraaj&#34; champions unity, empowerment, and sustainable development, leaving a lasting mark on diverse communities  by scaling and using innovations.</div>
+    <div class="footer-heading"> © Copyright</div>
+    <div class="footer-desc">&#34;KK Bhatt&#34; </div>
   </div>
 </div>
 </body>
