--- a/frontend/option-representatives.html
+++ b/frontend/option-representatives.html
@@ -4,75 +4,90 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <style>     
+    <style>
+      body {
+        font-family: 'Inter', sans-serif;
+        margin: 0;
+        padding: 0;
+        background-color: #f3f4f6;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        min-height: 100vh;
+      }
+
+      .options {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        gap: 20px;
+        padding: 20px;
+      }
+
       button {
         position: relative;
         display: inline-block;
-        margin: 15px;
         padding: 15px 30px;
         text-align: center;
-        font-size: 30px;
+        font-size: 24px;
         letter-spacing: 1px;
         text-decoration: none;
         color: #725ac1;
         background: transparent;
         cursor: pointer;
-        transition: ease-out 0.5s;
+        transition: all 0.5s ease-out;
         border: 2px solid #725ac1;
         border-radius: 10px;
         box-shadow: inset 0 0 0 0 #725ac1;
-        width: 550px;
-        height: 330px;
+        width: 300px;
+        height: 200px;
         font-family: 'Inter', sans-serif;
       }
 
       button:hover {
         color: white;
-        box-shadow: inset 0 -330px 0 0 #725ac1;
+        box-shadow: inset 0 -200px 0 0 #725ac1;
       }
 
       button:active {
-        transform: scale(0.9);
+        transform: scale(0.95);
       }
-      .line1{
-        display: flex;
-        justify-content: space-around;
+
+      @media screen and (max-width: 768px) {
+        button {
+          width: 260px;
+          height: 180px;
+          font-size: 22px;
+        }
       }
-      .line2{
-        display: flex;
-        justify-content: space-around;
-      }
-      .line3{
-        display: flex;
-        justify-content: space-around;
+
+      @media screen and (max-width: 480px) {
+        button {
+          width: 220px;
+          height: 150px;
+          font-size: 18px;
+        }
       }
     </style>
     <script>
       window.embeddedChatbotConfig = {
         chatbotId: "v-meGkzCfGPgsHHKaU-ff",
-        domain: "www.chatbase.co"
-      }
-      </script>
-      <script
-        src="https://www.chatbase.co/embed.min.js"
-        chatbotId="v-meGkzCfGPgsHHKaU-ff"
-        domain="www.chatbase.co"
-        defer>
-      </script>
+        domain: "www.chatbase.co",
+      };
+    </script>
+    <script
+      src="https://www.chatbase.co/embed.min.js"
+      chatbotId="v-meGkzCfGPgsHHKaU-ff"
+      domain="www.chatbase.co"
+      defer
+    ></script>
   </head>
   <body>
-    <center>
-        <div class="options">
-    <div class="line1">
-      <a href="/complaint_history_all"><button >View <br>Complaints</button></a>
-      <button onclick="window.location.href='higher-authorities-complaint.html'">Complaint Higher<br> Authorities</button>
+    <div class="options">
+      <button onclick="window.location.href='view-complaints.html'">View <br>Complaints</button>
+      <button onclick="window.location.href='higher-authorities-complaint.html'">Complaint Higher<br>Authorities</button>
+      <button onclick="window.location.href='solved-complaints.html'">Complaints <br>Solved</button>
+      <button>Polls</button>
     </div>
-    <div class="line2">
-      <a href="/complaint_history_solved"><button >Solved <br>Complaints</button></a>
-      <a href="/poll-creation"><button>Polls</button></a>
-      
-    </div>
-    </div>
-    </center>
   </body>
 </html>
