--- a/frontend/option-user.html
+++ b/frontend/option-user.html
@@ -3,75 +3,97 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <style>     
+    <title>Responsive Interface</title>
+    <style>
+      body {
+        background: linear-gradient(250.04deg, #29384d 50.42%, #8e00ff 87.93%);
+        font-family: Arial, sans-serif;
+        margin: 0;
+        padding: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+      }
+      .options {
+        max-width: 1000px;
+        padding: 20px;
+      }
       button {
         position: relative;
         display: inline-block;
         margin: 15px;
         padding: 15px 30px;
         text-align: center;
-        font-size: 30px;
+        font-size: 1.5rem;
         letter-spacing: 1px;
         text-decoration: none;
-        color: #725ac1;
+        color: #000000;
         background: transparent;
         cursor: pointer;
         transition: ease-out 0.5s;
-        border: 2px solid #725ac1;
+        border: 2px solid #000000;
         border-radius: 10px;
-        box-shadow: inset 0 0 0 0 #725ac1;
-        width: 550px;
-        height: 330px;
-        font-family: 'Inter', sans-serif;
+        box-shadow: inset 0 0 0 0 #000000;
+        width: 100%;
+        height: 150px;
+        max-width: 350px;
       }
-
       button:hover {
         color: white;
-        box-shadow: inset 0 -330px 0 0 #725ac1;
+        box-shadow: inset 0 -150px 0 0 #301063;
       }
-
       button:active {
-        transform: scale(0.9);
+        transform: scale(0.95);
       }
-      .line1{
+      .line {
         display: flex;
         justify-content: space-around;
+        flex-wrap: wrap;
       }
-      .line2{
-        display: flex;
-        justify-content: space-around;
+      @media (max-width: 768px) {
+        button {
+          font-size: 1.2rem;
+          padding: 10px 20px;
+          height: 130px;
+        }
       }
-      .line3{
-        display: flex;
-        justify-content: space-around;
+      @media (max-width: 480px) {
+        button {
+          font-size: 1rem;
+          height: 100px;
+        }
       }
     </style>
     <script>
       window.embeddedChatbotConfig = {
         chatbotId: "v-meGkzCfGPgsHHKaU-ff",
         domain: "www.chatbase.co"
-      }
-      </script>
-      <script
-        src="https://www.chatbase.co/embed.min.js"
-        chatbotId="v-meGkzCfGPgsHHKaU-ff"
-        domain="www.chatbase.co"
-        defer>
-      </script>
+      };
+    </script>
+    <script
+      src="https://www.chatbase.co/embed.min.js"
+      chatbotId="v-meGkzCfGPgsHHKaU-ff"
+      domain="www.chatbase.co"
+      defer
+    ></script>
   </head>
   <body>
-    <center>
-        <div class="options">
-    <div class="line1">
-      <button onclick="window.location.href='new-complaint.html'">Create <br>Complaints</button>
-      <a href="/complaint_history"><button >Complaint Status</button></a>
+    <div class="options">
+      <div class="line">
+        <button onclick="window.location.href='new-complaint.html'">
+          New <br />Complaint
+        </button>
+        <button onclick="window.location.href='complaint-status.html'">
+          Complaint <br />Status
+        </button>
+      </div>
+      <div class="line">
+        <button onclick="window.location.href='show_polls.html'">
+          View <br />Polls
+        </button>
+        <button>Chats</button>
+      </div>
     </div>
-    <div class="line2">
-      <button onclick="window.location.href='solved-complaints.html'">View <br>Polls</button>
-      <a href="/chat-rooms"><button>Chatting Platform</button></a>
-    </div>
-    </div>
-    </center>
   </body>
 </html>
